Run all SAT models from PBDRv3 folder

--- a/bolo-calc/pbdr_v3/SetFixedPsats.ipynb
+++ b/bolo-calc/pbdr_v3/SetFixedPsats.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "32efa8bf",
    "metadata": {},
    "source": [
     "# Set Fixed Psats\n",
@@ -14,26 +15,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "ae058049",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CHLAT_20210714.yaml  SAT_LF_20211015.yaml SPLAT_20210714.yaml\r\n",
-      "SAT_HF_20210714.yaml SAT_MF_20211015.yaml\r\n"
+      "CHLAT_20210714.yaml\n",
+      "SAT_HF_20210714.yaml\n",
+      "SAT_LF_20211015.yaml\n",
+      "SAT_MF_20211015.yaml\n",
+      "SPLAT_20210714.yaml\n"
      ]
     }
    ],
    "source": [
     "# See what yaml files are locally available.\n",
-    "!ls *.yaml"
+    "import glob\n",
+    "for g in glob.glob('*.yaml'):\n",
+    "    print(g)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "aa3b61f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "id": "ab1ee342",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +145,7 @@
     "    del dd['version']\n",
     "\n",
     "    # location of atmosphere file\n",
-    "    dd['sim_config']['config_dir'] = '../../bolo-calc/config'\n",
+    "    dd['sim_config']['config_dir'] = '../scripts'\n",
     "\n",
     "    top = Top(**dd)\n",
     "    top.run()\n",
@@ -197,7 +206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
+   "id": "ae89f207",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +234,7 @@
        " 'SAT_HF_20210714': {'HF_1': 33.033, 'HF_2': 40.621}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,6 +245,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "58c4d2e1",
    "metadata": {},
    "source": [
     "# Save fixed psats to toml file."
@@ -242,7 +253,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
+   "id": "5a4b08bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,6 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6181bd07",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -261,7 +274,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
