Fix up Comparisons notebook for multiple models
Fix up Comparisons notebook to output a summary of the differences between model inputs, and to carry out comparisons of multiple models.

--- a/bolo-calc/pbdr_v4/RunDefaultConfig.ipynb
+++ b/bolo-calc/pbdr_v4/RunDefaultConfig.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "id": "ac0f78f6",
    "metadata": {},
    "outputs": [
@@ -138,6 +138,7 @@
    ],
    "source": [
     "data = {}\n",
+    "tops = {}\n",
     "\n",
     "yamlfiles = ['SAT_LF_20211015.yaml','SAT_MF_20211015.yaml', 'SAT_HF_20220524.yaml' ]\n",
     "#read fixed PSATs from .toml file\n",
@@ -184,6 +185,8 @@
     "    top = Top(**dd)\n",
     "    top.run()\n",
     "    \n",
+    "    tops[yamlfile] = top\n",
+    "    \n",
     "    for chan in top.instrument.tables.keys():\n",
     "        if chan.split('_')[0] == 'cam' :\n",
     "            chname = chan.split('_')[2] + '_' + chan.split('_')[3]\n",
@@ -220,35 +223,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 73,
    "id": "1598d2cb",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict_keys(['cam_1_HF_1_sims', 'cam_1_HF_2_sims', 'optical'])"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top.instrument.tables.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "32ab43a6",
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "SAT_LF_20211015.yaml\n",
+      "cam_1_LF_1_sims\n",
+      "  Efficiency:         0.45\n",
+      "  Optical power (pW): 0.62\n",
+      "  P_sat (pW):         1.55\n",
+      "  F_link:             0.52\n",
+      "  G:                  43.51\n",
+      "  NEP_bolo:           5.68\n",
+      "  NEP_readout:        3.84\n",
+      "  NEP_photon:         10.58\n",
+      "  NEP_tot:            12.61\n",
+      "  NET_bolo:           171.21\n",
+      "  NET_bolo_corr:      177.92\n",
+      "  corr_factor:        1.04\n",
+      "  NET_wafer (uncorr)  39.07\n",
+      "\n",
+      "cam_1_LF_2_sims\n",
+      "  Efficiency:         0.47\n",
+      "  Optical power (pW): 2.46\n",
+      "  P_sat (pW):         6.15\n",
+      "  F_link:             0.52\n",
+      "  G:                  172.45\n",
+      "  NEP_bolo:           11.30\n",
+      "  NEP_readout:        10.27\n",
+      "  NEP_photon:         30.02\n",
+      "  NEP_tot:            33.68\n",
+      "  NET_bolo:           215.61\n",
+      "  NET_bolo_corr:      217.19\n",
+      "  corr_factor:        1.01\n",
+      "  NET_wafer (uncorr)  49.21\n",
+      "\n",
+      "\n",
+      "SAT_MF_20211015.yaml\n",
+      "cam_1_MF1_1_sims\n",
+      "  Efficiency:         0.40\n",
+      "  Optical power (pW): 3.25\n",
+      "  P_sat (pW):         8.21\n",
+      "  F_link:             0.52\n",
+      "  G:                  230.32\n",
+      "  NEP_bolo:           13.06\n",
+      "  NEP_readout:        12.80\n",
+      "  NEP_photon:         37.80\n",
+      "  NEP_tot:            41.99\n",
+      "  NET_bolo:           313.53\n",
+      "  NET_bolo_corr:      324.11\n",
+      "  corr_factor:        1.03\n",
+      "  NET_wafer (uncorr)  20.44\n",
+      "\n",
+      "cam_1_MF1_2_sims\n",
+      "  Efficiency:         0.46\n",
+      "  Optical power (pW): 5.15\n",
+      "  P_sat (pW):         13.29\n",
+      "  F_link:             0.52\n",
+      "  G:                  372.98\n",
+      "  NEP_bolo:           16.62\n",
+      "  NEP_readout:        17.33\n",
+      "  NEP_photon:         51.50\n",
+      "  NEP_tot:            56.82\n",
+      "  NET_bolo:           335.04\n",
+      "  NET_bolo_corr:      336.03\n",
+      "  corr_factor:        1.00\n",
+      "  NET_wafer (uncorr)  21.85\n",
+      "\n",
+      "cam_1_MF2_1_sims\n",
+      "  Efficiency:         0.43\n",
+      "  Optical power (pW): 3.32\n",
+      "  P_sat (pW):         8.21\n",
+      "  F_link:             0.52\n",
+      "  G:                  230.32\n",
+      "  NEP_bolo:           13.06\n",
+      "  NEP_readout:        12.63\n",
+      "  NEP_photon:         37.23\n",
+      "  NEP_tot:            41.43\n",
+      "  NET_bolo:           274.73\n",
+      "  NET_bolo_corr:      281.08\n",
+      "  corr_factor:        1.02\n",
+      "  NET_wafer (uncorr)  16.71\n",
+      "\n",
+      "cam_1_MF2_2_sims\n",
+      "  Efficiency:         0.44\n",
+      "  Optical power (pW): 5.49\n",
+      "  P_sat (pW):         13.29\n",
+      "  F_link:             0.52\n",
+      "  G:                  372.98\n",
+      "  NEP_bolo:           16.62\n",
+      "  NEP_readout:        18.06\n",
+      "  NEP_photon:         53.91\n",
+      "  NEP_tot:            59.23\n",
+      "  NET_bolo:           359.39\n",
+      "  NET_bolo_corr:      360.44\n",
+      "  corr_factor:        1.00\n",
+      "  NET_wafer (uncorr)  21.86\n",
+      "\n",
+      "\n",
+      "SAT_HF_20220524.yaml\n",
       "cam_1_HF_1_sims\n",
       "  Efficiency:         0.37\n",
       "  Optical power (pW): 11.24\n",
@@ -284,105 +361,9 @@
     }
    ],
    "source": [
-    "print_cam_tables(top.instrument.tables)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "1eeb4660-fb16-4db0-a887-61823f97bbdb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><i>Table length=1</i>\n",
-       "<table id=\"table2380869565072\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>effic</th><th>opt_power</th><th>P_sat</th><th>Flink</th><th>G</th><th>tel_rj_temp</th><th>sky_rj_temp</th><th>NEP_bolo</th><th>NEP_read</th><th>NEP_ph</th><th>NEP</th><th>NET</th><th>NET_corr</th><th>corr_fact</th><th>NET_arr</th></tr></thead>\n",
-       "<thead><tr><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
-       "<tr><td>0.36672490033460503</td><td>11.240110063792123</td><td>28.1</td><td>0.5240505937739165</td><td>788.3143198369071</td><td>23.880540003615376</td><td>30.31229648722249</td><td>24.166860176805763</td><td>29.29158638392571</td><td>88.2420853621882</td><td>96.06612198251771</td><td>749.3210345270589</td><td>755.1461042753955</td><td>1.007773797184291</td><td>27.354042122668023</td></tr>\n",
-       "</table></div>"
-      ],
-      "text/plain": [
-       "<Table length=1>\n",
-       "       effic            opt_power      ...     corr_fact          NET_arr      \n",
-       "      float64            float64       ...      float64           float64      \n",
-       "------------------- ------------------ ... ----------------- ------------------\n",
-       "0.36672490033460503 11.240110063792123 ... 1.007773797184291 27.354042122668023"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top.instrument.tables['cam_1_HF_1_sims']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "d677b8e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cam_1_HF_1_sims\n",
-      "  Efficiency:         0.37\n",
-      "  Optical power (pW): 11.24\n",
-      "  P_sat (pW):         28.10\n",
-      "  F_link:             0.52\n",
-      "  G:                  788.31\n",
-      "  NEP_bolo:           24.17\n",
-      "  NEP_readout:        29.29\n",
-      "  NEP_photon:         88.24\n",
-      "  NEP_tot:            96.07\n",
-      "  NET_bolo:           749.32\n",
-      "  NET_bolo_corr:      755.15\n",
-      "  corr_factor:        1.01\n",
-      "  NET_wafer (uncorr)  27.35\n",
-      "\n",
-      "cam_1_HF_2_sims\n",
-      "  Efficiency:         0.33\n",
-      "  Optical power (pW): 13.94\n",
-      "  P_sat (pW):         34.84\n",
-      "  F_link:             0.52\n",
-      "  G:                  977.45\n",
-      "  NEP_bolo:           26.91\n",
-      "  NEP_readout:        36.01\n",
-      "  NEP_photon:         109.20\n",
-      "  NEP_tot:            118.09\n",
-      "  NET_bolo:           1805.05\n",
-      "  NET_bolo_corr:      1807.30\n",
-      "  corr_factor:        1.00\n",
-      "  NET_wafer (uncorr)  65.89\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "for keyname in top.instrument.tables.keys():\n",
-    "    if 'cam' in keyname:\n",
-    "        print(keyname)\n",
-    "        dat = np.array(top.instrument.tables[keyname])\n",
-    "        print('  Efficiency:         {0:3.2f}'.format(dat[0][0]))\n",
-    "        print('  Optical power (pW): {0:3.2f}'.format(dat[0][1]))\n",
-    "        print('  P_sat (pW):         {0:3.2f}'.format(dat[0][2]))\n",
-    "        print('  F_link:             {0:3.2f}'.format(dat[0][3]))\n",
-    "        print('  G:                  {0:3.2f}'.format(dat[0][4]))\n",
-    "        print('  NEP_bolo:           {0:3.2f}'.format(dat[0][7]))\n",
-    "        print('  NEP_readout:        {0:3.2f}'.format(dat[0][8]))       \n",
-    "        print('  NEP_photon:         {0:3.2f}'.format(dat[0][9]))\n",
-    "        print('  NEP_tot:            {0:3.2f}'.format(dat[0][10]))\n",
-    "        print('  NET_bolo:           {0:3.2f}'.format(dat[0][11]))\n",
-    "        print('  NET_bolo_corr:      {0:3.2f}'.format(dat[0][12]))\n",
-    "        print('  corr_factor:        {0:3.2f}'.format(dat[0][13]))\n",
-    "        print('  NET_wafer (uncorr)  {0:3.2f}'.format(dat[0][14]))\n",
-    "    print()"
+    "for yamlfile in yamlfiles:\n",
+    "    print(yamlfile)\n",
+    "    print_cam_tables(tops[yamlfile].instrument.tables)"
    ]
   },
   {
