--- a/bolo-calc/Comparisons.ipynb
+++ b/bolo-calc/Comparisons.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -176,16 +176,19 @@
      "text": [
       "\n",
       "SAT_LF\n",
+      "Comparing pbdr_v3\\SAT_LF_20211015.yaml to pbdr_v4\\SAT_LF_20220524.yaml\n",
       "Value of root['version']['date'] changed from 20211015 to 20220524.\n",
       "Value of root['instrument']['optics_config']['elements']['lens1']['thickness'] changed from 0.055 to 0.057.\n",
       "Value of root['instrument']['optics_config']['elements']['lens2']['thickness'] changed from 0.059 to 0.048.\n",
       "\n",
       "SAT_MF\n",
+      "Comparing pbdr_v3\\SAT_MF_20211015.yaml to pbdr_v4\\SAT_MF_20220524.yaml\n",
       "Value of root['version']['date'] changed from 20211015 to 20220524.\n",
       "Value of root['instrument']['optics_config']['elements']['lens1']['thickness'] changed from 0.055 to 0.057.\n",
       "Value of root['instrument']['optics_config']['elements']['lens2']['thickness'] changed from 0.059 to 0.048.\n",
       "\n",
       "SAT_HF\n",
+      "Comparing pbdr_v3\\SAT_HF_20210714.yaml to pbdr_v4\\SAT_HF_20220524.yaml\n",
       "Item root['instrument']['optics_config']['elements']['ApStop'] added to dictionary.\n",
       "Item root['instrument']['optics_config']['elements']['aperture'] removed from dictionary.\n",
       "Value of root['version']['date'] changed from 20210714 to 20220524.\n",
@@ -212,7 +215,7 @@
     "        var = yaml.safe_load(open(v_yaml))\n",
     "        variations.append(var)\n",
     "    \n",
-    "    for var in variations:\n",
+    "        print(f\"Comparing {base_yaml} to {v_yaml}\")\n",
     "        diff = deepdiff.DeepDiff(base, var, view='tree')\n",
     "        print(diff.pretty())\n",
     "    "
