--- a/bolo-calc/pbdr_v4/RunDefaultConfig.ipynb
+++ b/bolo-calc/pbdr_v4/RunDefaultConfig.ipynb
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 104,
    "id": "75cd469f",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,6 @@
      "output_type": "stream",
      "text": [
       "LF_1\n",
-      "LF_2\n",
       "channel   element     elem_effic_mean   elem_power_to_det_mean\n",
       "------- ------------ ------------------ ----------------------\n",
       "cam_1_0          cmb                1.0    0.11413838159646791\n",
@@ -417,6 +416,7 @@
       "cam_1_0      lowpass             0.9405  6.612144468996746e-09\n",
       "cam_1_0     detector 0.6300000000000001                    0.0\n",
       "\n",
+      "LF_2\n",
       "channel   element     elem_effic_mean   elem_power_to_det_mean\n",
       "------- ------------ ------------------ ----------------------\n",
       "cam_1_1          cmb                1.0    0.21873919718876933\n",
@@ -435,9 +435,6 @@
       "cam_1_1     detector 0.6500000000000016                    0.0\n",
       "\n",
       "MF1_1\n",
-      "MF1_2\n",
-      "MF2_1\n",
-      "MF2_2\n",
       "channel   element     elem_effic_mean   elem_power_to_det_mean\n",
       "------- ------------ ------------------ ----------------------\n",
       "cam_1_0          cmb                1.0    0.13400226995177522\n",
@@ -455,6 +452,7 @@
       "cam_1_0      lowpass             0.9405 1.7692497521119675e-19\n",
       "cam_1_0     detector               0.65                    0.0\n",
       "\n",
+      "MF1_2\n",
       "channel   element     elem_effic_mean   elem_power_to_det_mean\n",
       "------- ------------ ------------------ ----------------------\n",
       "cam_1_1          cmb                1.0    0.11863217636578977\n",
@@ -472,6 +470,7 @@
       "cam_1_1      lowpass             0.9405 1.5545343245776675e-30\n",
       "cam_1_1     detector               0.68                    0.0\n",
       "\n",
+      "MF2_1\n",
       "channel   element     elem_effic_mean   elem_power_to_det_mean\n",
       "------- ------------ ------------------ ----------------------\n",
       "cam_1_2          cmb                1.0     0.1414679114501636\n",
@@ -489,6 +488,7 @@
       "cam_1_2      lowpass             0.9405 2.8882226641758637e-21\n",
       "cam_1_2     detector               0.65                    0.0\n",
       "\n",
+      "MF2_2\n",
       "channel   element     elem_effic_mean   elem_power_to_det_mean\n",
       "------- ------------ ------------------ ----------------------\n",
       "cam_1_3          cmb                1.0    0.10943407654585817\n",
@@ -507,7 +507,6 @@
       "cam_1_3     detector               0.68                    0.0\n",
       "\n",
       "HF_1\n",
-      "HF_2\n",
       "channel   element     elem_effic_mean   elem_power_to_det_mean\n",
       "------- ------------ ------------------ ----------------------\n",
       "cam_1_0          cmb                1.0   0.061659105048484736\n",
@@ -525,6 +524,7 @@
       "cam_1_0      lowpass 0.9405000000000102 1.1954367078418617e-44\n",
       "cam_1_0     detector  0.670000000000006                    0.0\n",
       "\n",
+      "HF_2\n",
       "channel   element     elem_effic_mean   elem_power_to_det_mean\n",
       "------- ------------ ------------------ ----------------------\n",
       "cam_1_1          cmb                1.0    0.02528768548755682\n",
@@ -546,16 +546,19 @@
     }
    ],
    "source": [
-    "#\n",
+    "\n",
+    "\n",
     "for t, top in tops.items():\n",
+    "    chnames = []\n",
     "    for chan in top.instrument.tables.keys():\n",
     "        if chan.split('_')[0] == 'cam' :\n",
     "            chname = chan.split('_')[2] + '_' + chan.split('_')[3]\n",
-    "            print(chname)\n",
+    "            chnames.append(chname)\n",
     "    \n",
     "    ncams = len(top.instrument.tables.keys())-1\n",
     "\n",
     "    for nnn in range(ncams):\n",
+    "        print(chnames[nnn])\n",
     "        rows = nnn*14 + np.arange(14)\n",
     "        top.instrument.tables['optical']['channel', 'element','elem_effic_mean','elem_power_to_det_mean'][rows].pprint()\n",
     "        print()"
