--- a/bolo-calc/pbdr_v4/RunDefaultConfig.ipynb
+++ b/bolo-calc/pbdr_v4/RunDefaultConfig.ipynb
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 107,
    "id": "75cd469f",
    "metadata": {},
    "outputs": [
@@ -556,10 +556,11 @@
     "            chnames.append(chname)\n",
     "    \n",
     "    ncams = len(top.instrument.tables.keys())-1\n",
+    "    nrows = int(len(top.instrument.tables['optical']['channel'])/ncams)\n",
     "\n",
-    "    for nnn in range(ncams):\n",
-    "        print(chnames[nnn])\n",
-    "        rows = nnn*14 + np.arange(14)\n",
+    "    for n in range(ncams):\n",
+    "        print(chnames[n])\n",
+    "        rows = n*nrows + np.arange(nrows)\n",
     "        top.instrument.tables['optical']['channel', 'element','elem_effic_mean','elem_power_to_det_mean'][rows].pprint()\n",
     "        print()"
    ]
