updating pbdr calculations with current models

--- a/jbolo/PBDR_2023/InputsNotes.ipynb
+++ b/jbolo/PBDR_2023/InputsNotes.ipynb
@@ -84,7 +84,7 @@
     "\n",
     "\n",
     "- SATs:   PBDR SAT section says 7.5mm thick for all bands.\n",
-    "- LATs:   per Katie Harrington Jan 2023 currently thinking 3-6mm, so using 5mm here for all bands.\n",
+    "- LATs:   per Katie Harrington Jan 2023 currently thinking 3-6mm, so using 5mm here for all bands.   UPDATE March 16, 2023:  Katie is using 4mm in her model, so using that here.\n",
     "\n",
     "\n",
     "We use two data inputs for this model:\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -113,11 +113,11 @@
       "\n",
       "SPLAT\n",
       "nu (GHz) = array([ 20.  ,  25.75,  38.75,  91.5 , 148.5 , 227.  , 285.5 ])\n",
-      "abs      = array([0.0001, 0.0002, 0.0005, 0.0045, 0.0159, 0.0471, 0.0838])\n",
+      "abs      = array([0.0001, 0.0001, 0.0004, 0.0036, 0.0127, 0.0378, 0.0676])\n",
       "\n",
       "CHLAT\n",
       "nu (GHz) = array([ 25.75,  38.75,  91.5 , 148.5 , 227.  , 285.5 ])\n",
-      "abs      = array([0.0002, 0.0005, 0.0045, 0.0159, 0.0471, 0.0838])\n",
+      "abs      = array([0.0001, 0.0004, 0.0036, 0.0127, 0.0378, 0.0676])\n",
       "\n"
      ]
     }
@@ -139,7 +139,7 @@
     "# From Halpern etal\n",
     "a_nylon = 5e-4\n",
     "b_nylon = 2.6   # Halpern says 2.9, we renormalize to Spider and get 2.6.\n",
-    "delta_z_dict = {'SAT':0.75, 'SPLAT':0.5, 'CHLAT':0.5} # in cm\n",
+    "delta_z_dict = {'SAT':0.75, 'SPLAT':0.4, 'CHLAT':0.4} # in cm\n",
     "#delta_z = 2.30 #cm  (Use to check Spider 0.33 abs at 280GHz)\n",
     "\n",
     "# We're going to print this in a format that makes it easy to cut and paste into a yaml file.\n",
