--- a/jbolo/PBDR_2023/BandOptimizations.ipynb
+++ b/jbolo/PBDR_2023/BandOptimizations.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -23,12 +23,32 @@
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "import yaml\n",
     "import sys\n",
+    "import time\n",
     "#sys.path.insert(0,'/Users/ruhl/code/jbolo/python/')\n",
     "from  jbolo_funcs import *\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams.update({'font.size': 12})\n",
     "plt.rcParams['figure.figsize'] = [8, 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.09808349609375e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = time.time()\n",
+    "b = time.time()\n",
+    "print(b-a)"
    ]
   },
   {
@@ -41,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -145,18 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pole, pvw=321,a=2.0, n=0.7\n"
+      "Pole, pvw=321,a=2.0, n=0.7\n",
+      "32.25482201576233\n"
      ]
     }
    ],
    "source": [
+    "time_1 = time.time()\n",
     "yamlfile = 'yamls/SPLAT_20230122.yaml'\n",
     "sim = yaml.safe_load(open(yamlfile))\n",
     "\n",
@@ -165,8 +187,8 @@
     "sim['bolo_config']['psat_factor'] = 3.0\n",
     "    \n",
     "# You can change the site or pwv if you want \n",
-    "sim['sources']['atmosphere']['site'] = 'Pole' #Pole\n",
-    "sim['sources']['atmosphere']['pwv']  = 321  # 321\n",
+    "#sim['sources']['atmosphere']['site'] = 'Pole' #Pole\n",
+    "#sim['sources']['atmosphere']['pwv']  = 321  # 321\n",
     "\n",
     "chlist = list(sim['channels'].keys())\n",
     "\n",
@@ -235,19 +257,21 @@
     "\n",
     "        ww += 1\n",
     "    cc += 1\n",
-    "\n"
+    "\n",
+    "time_2 = time.time()\n",
+    "print(time_2-time_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.000306861792783411\n",
+      "0.00015896966345684227\n",
       "1.0157894736842106\n"
      ]
     }
@@ -259,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -270,7 +294,7 @@
        "Text(0.5, 0.98, 'Pole, pvw=321,a=2.0, n=0.7')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
