writing mapping speed ratios

--- a/jbolo/AoA/2024/SAT_NETs_Chile.ipynb
+++ b/jbolo/AoA/2024/SAT_NETs_Chile.ipynb
@@ -1266,6 +1266,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Print a table with relevant mapping speed ratios\n",
+    "- (Pole_max/Pole_baseline)\n",
+    "- (Chile_max/ChileAoAscaledoptics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writetofile = True\n",
+    "\n",
+    "if writetofile:\n",
+    "    outfile = open('mapping_speed_ratios.txt', 'w')\n",
+    "else:\n",
+    "    outfile = sys.stdout\n",
+    "\n",
+    "print('# Mapping speed ratios', file=outfile)\n",
+    "print('# Channel  Pole_max/Pole_orig  Chile_max/Chile_AoAscaledoptics',file=outfile)   \n",
+    "for ch in SAT_models['Pole_orig']['channels']:\n",
+    "    ms0 = 1/SAT_models['Pole_orig'][ch]['NET_tube']**2\n",
+    "    ms1 = 1/SAT_models['Pole_max'][ch]['NET_tube']**2\n",
+    "    rpole = ms1/ms0\n",
+    "    ms2 = 1/SAT_models['Chile_AoAAlt3'][ch]['NET_tube']**2\n",
+    "    ms3 = 1/SAT_models['Chile_max'][ch]['NET_tube']**2\n",
+    "    rchile = ms3/ms2\n",
+    "    #\n",
+    "    print(f'{ch.ljust(7)} {rpole:12.2f} {rchile:15.2f}',file=outfile)\n",
+    "\n",
+    "if writetofile:\n",
+    "    outfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 1952\n",
+      "lrwxr-xr-x  1 ruhl  staff      20 Jun 18 11:51 \u001b[35mApertureFuncs\u001b[m\u001b[m -> ../../ApertureFuncs/\n",
+      "-rw-r--r--  1 ruhl  staff  598987 Jun 19 14:27 SAT_NETs_Chile.ipynb\n",
+      "-rw-r--r--  1 ruhl  staff  392054 Jun 19 13:10 SAT_models_outputs_20240619.toml\n",
+      "lrwxr-xr-x  1 ruhl  staff      11 Jun 18 11:51 \u001b[35matmos\u001b[m\u001b[m -> ../../atmos\n",
+      "-rw-r--r--  1 ruhl  staff     382 Jun 19 14:29 mapping_speed_ratios.txt\n",
+      "drwxr-xr-x  7 ruhl  staff     224 Jun 18 16:10 \u001b[34myamls\u001b[m\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
