updated AoA/2024 yamls and notebooks

--- a/jbolo/AoA/2024/BeamEstimates.ipynb
+++ b/jbolo/AoA/2024/BeamEstimates.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gausian beam estimates for CMB-S4 SATs\n",
+    "# Gausian on-sky beam estimates for CMB-S4 SATs\n",
     "\n",
     "JER, 6/23/2024\n",
     "\n",
@@ -37,23 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[35mApertureFuncs\u001b[m\u001b[m                    SAT_models_outputs_20240619.toml\n",
-      "BeamEstimates.ipynb              \u001b[35matmos\u001b[m\u001b[m\n",
-      "S4_LAT_MF_v11_3_mag.csv          mapping_speed_ratios.txt\n",
-      "S4_SAT_MF2_v6_38_mag.csv         \u001b[34myamls\u001b[m\u001b[m\n",
-      "SAT_NETs_Chile.ipynb\n"
+      "/Users/ruhl/code/bolo_calc_runs/jbolo/AoA/2024\n"
      ]
     }
    ],
    "source": [
-    "!ls"
+    "!pwd"
    ]
   },
   {
@@ -249,9 +245,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scaling with horn diameter and frequency\n",
+    "# Scaling LAT-MF with horn diameter and frequency\n",
     "\n",
-    "The beam pattern shown above should scale in theta as the horn diameter and frequency are changed.  To illustrate the frequency scaling, let's apply the expected $\\theta \\propto 1/\\nu$, and overplot the same traces."
+    "The LAT-MF beam pattern shown above should scale in theta as the horn diameter and frequency are changed.  To illustrate the frequency scaling, let's apply the expected $\\theta \\propto 1/\\nu$, and overplot the same traces."
    ]
   },
   {
@@ -436,7 +432,7 @@
     "The plot above shows that the scaling of the 5.2mm horn pattern to the 8.79mm horn does really well at 95GHz, \n",
     "but shrinks it a little too much at 155GHz.  The Gaussian beam lines show that the orange line is well-fit by a Gaussian with a very similar edge taper.  The error at 155 GHz will lead to too-concentrated illumination on the stop, and therefore an overestimate of the FWHM beam on the sky.\n",
     "\n",
-    "Therefore we'll proceed with this method of estimating, but recognize that it's not great as we move to larger horns (eg the original SAT LF's)\n"
+    "Therefore we'll proceed with this method of estimating edge taper, and then using that to estimate on-sky beam sizes, but recognize that it's not great as we move to larger horns (eg the original SAT LF's)\n"
    ]
   },
   {
