Update to compare thin windows at Pole to previous 20mm HMPE window

--- a/jbolo/ChOpt_Report/SAT_NETs_Pole_AmbientTemsp.ipynb
+++ b/jbolo/ChOpt_Report/SAT_NETs_Pole_AmbientTemsp.ipynb
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'D:\\\\pgrimes'"
+       "'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\bolo_calc_runs\\\\jbolo\\\\ChOpt_Report'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\python313.zip', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\DLLs', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo', '', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib\\\\site-packages', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib\\\\site-packages\\\\win32', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib\\\\site-packages\\\\win32\\\\lib', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib\\\\site-packages\\\\Pythonwin']\n"
+      "['D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\python313.zip', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\DLLs', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo', '', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib\\\\site-packages', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib\\\\site-packages\\\\win32', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib\\\\site-packages\\\\win32\\\\lib', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib\\\\site-packages\\\\Pythonwin']\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -107,16 +107,13 @@
       "\n",
       " Directory of D:\\pgrimes\\Software\\GitHub\\bolo_calc_runs\\jbolo\\ChOpt_Report\\yamls\n",
       "\n",
-      "03/17/2025  13:11    <DIR>          .\n",
-      "03/17/2025  13:11    <DIR>          ..\n",
-      "03/17/2025  11:03             8,996 SAT_2025_AoAalt3.yaml\n",
+      "03/17/2025  14:55    <DIR>          .\n",
+      "03/17/2025  14:55    <DIR>          ..\n",
+      "03/17/2025  14:55             8,898 SAT_2025_AoAalt1.yaml\n",
       "03/17/2025  13:16             8,940 SAT_2025_PoleAlt1.yaml\n",
       "03/17/2025  13:16             8,899 SAT_2025_PoleAlt1_273K.yaml\n",
-      "03/17/2025  10:55             9,007 SAT_HWP_aggr_20241121_phase2.yaml\n",
-      "03/17/2025  10:55             9,016 SAT_HWP_aggr_20250126_thinwindow.yaml\n",
-      "03/17/2025  10:55             5,499 SAT_HWP_aggr_MF.yaml\n",
-      "               6 File(s)         50,357 bytes\n",
-      "               2 Dir(s)  648,166,801,408 bytes free\n"
+      "               3 File(s)         26,737 bytes\n",
+      "               2 Dir(s)  648,166,838,272 bytes free\n"
      ]
     },
     {
@@ -145,19 +142,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dictionary of models to use, which includes yaml file for now, but will have results in it later.\n",
     "SAT_models = {}\n",
     "\n",
-    "# Thick (20mm) window, tandelta = 3e-4\n",
+    "# Thin (1.5mm) window, tandelta = 3e-4\n",
+    "SAT_models['Pole_Alt1']={  \n",
+    "    'yaml':'SAT_2025_AoAalt1.yaml'\n",
+    "}\n",
+    "\n",
+    "# Thin (1.5mm) window, tandelta = 3e-4\n",
     "SAT_models['Pole_Alt1_273K']={  \n",
     "    'yaml':'SAT_2025_PoleAlt1_273K.yaml'\n",
     "}\n",
     "\n",
-    "# Thick (20mm) window, tandelta = 1.2e-4\n",
+    "# Thin (1.5mm) window, tandelta = 1.2e-4\n",
     "SAT_models['Pole_Alt1_B3Temps']={  \n",
     "    'yaml':'SAT_2025_PoleAlt1.yaml'\n",
     "}\n"
@@ -179,34 +181,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Pole_Alt1, Pole, pwv = 321 u, elev = 50\n",
+      "            NET_NC   ms_ratio     P_opt\n",
+      "LF_1         183.2      1.00       0.43\n",
+      "LF_2         171.8      1.00       1.89\n",
+      "MF_1_1       282.3      1.00       3.00\n",
+      "MF_2_1       243.8      1.00       2.93\n",
+      "MF_1_2       286.3      1.00       4.18\n",
+      "MF_2_2       306.6      1.00       4.45\n",
+      "HF_1         622.0      1.00       9.88\n",
+      "HF_2        1502.8      1.00      12.46\n",
+      "\n",
       "Pole_Alt1_273K, Pole, pwv = 321 u, elev = 50\n",
       "            NET_NC   ms_ratio     P_opt\n",
-      "LF_1         166.6      1.00       0.38\n",
-      "LF_2         156.4      1.00       1.69\n",
-      "MF_1_1       243.3      1.00       2.52\n",
-      "MF_2_1       200.0      1.00       2.32\n",
-      "MF_1_2       209.4      1.00       2.81\n",
-      "MF_2_2       220.6      1.00       2.92\n",
-      "HF_1         440.7      1.00       6.43\n",
-      "HF_2        1080.4      1.00       8.42\n",
+      "LF_1         166.6      1.21       0.38\n",
+      "LF_2         156.4      1.21       1.69\n",
+      "MF_1_1       243.3      1.35       2.52\n",
+      "MF_2_1       200.0      1.49       2.32\n",
+      "MF_1_2       209.4      1.87       2.81\n",
+      "MF_2_2       220.6      1.93       2.92\n",
+      "HF_1         440.7      2.00       6.43\n",
+      "HF_2        1080.4      1.94       8.42\n",
       "\n",
       "Pole_Alt1_B3Temps, Pole, pwv = 321 u, elev = 50\n",
       "            NET_NC   ms_ratio     P_opt\n",
-      "LF_1         162.0      1.06       0.37\n",
-      "LF_2         153.6      1.04       1.65\n",
-      "MF_1_1       240.0      1.03       2.48\n",
-      "MF_2_1       196.8      1.03       2.27\n",
-      "MF_1_2       205.5      1.04       2.74\n",
-      "MF_2_2       216.5      1.04       2.84\n",
-      "HF_1         434.7      1.03       6.30\n",
-      "HF_2        1069.2      1.02       8.29\n",
+      "LF_1         162.0      1.28       0.37\n",
+      "LF_2         153.6      1.25       1.65\n",
+      "MF_1_1       240.0      1.39       2.48\n",
+      "MF_2_1       196.8      1.54       2.27\n",
+      "MF_1_2       205.5      1.94       2.74\n",
+      "MF_2_2       216.5      2.01       2.84\n",
+      "HF_1         434.7      2.05       6.30\n",
+      "HF_2        1069.2      1.98       8.29\n",
       "\n"
      ]
     }
@@ -267,7 +280,7 @@
     "    #print('            NET_NC   corr_fact NET_C    NET_wafer  NET_tube map_speed  ms_ratio     P_opt')\n",
     "    print('            NET_NC   ms_ratio     P_opt')\n",
     "    for ch in SAT_models[model]['channels']:\n",
-    "        msratio = SAT_models[model][ch]['mapping_speed']/SAT_models['Pole_Alt1_273K'][ch]['mapping_speed']\n",
+    "        msratio = SAT_models[model][ch]['mapping_speed']/SAT_models['Pole_Alt1'][ch]['mapping_speed']\n",
     "        print(ch.ljust(10),end='')\n",
     "#        print('{0:8.1f}  {1:8.3f} {2:8.1f}  {3:8.1f} {4:8.2f}  {5:10.2e}  {6:8.2f} {7:10.2f}'.format(SAT_models[model][ch]['NET_NC'], \n",
     "#                                                                                           SAT_models[model][ch]['corr_factor'],\n",
